--- a/src/styles.css
+++ b/src/styles.css
@@ -8,11 +8,37 @@
   height: 80vh;
 }
 
+.more-complex-table-container {
+  width: 60vw;
+  height: 100vh;
+}
+
+.more-complex-table-batch {
+  width: 100%;
+  height: 20%;
+}
+
+.more-complex-table-bulk {
+  width: 100%;
+  height: 75%;
+}
+
+.more-complex-table-panel-inner {
+  margin: 24px;
+  max-height: 60%;
+}
+
 .full-width-panel {
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: row;
+}
+
+.full-width-panel-column {
+  height: 100%;
+  width: 100%;
+  overflow-y: scroll !important;
 }
 
 .full-width-grid {
